# SwaggerDocSrc/src/IO.Swagger/Controllers/ProjectsApi.cs
@@ -55,7 +55,7 @@ namespace IO.Swagger.Controllers
         /// <summary>
         /// 
         /// </summary>
-        /// <remarks>Delete the project, going by projectId (soft delete)</remarks>
+        /// <remarks>Delete a project</remarks>
         /// <param name="projectId"></param>
         /// <response code="200">Success</response>
         [HttpDelete]
@@ -65,6 +65,31 @@ namespace IO.Swagger.Controllers
         [SwaggerOperation("ApiV1ProjectProjectProjectIdDelete")]
         [SwaggerResponse(statusCode: 200, type: typeof(Response), description: "Success")]
         public virtual IActionResult ApiV1ProjectProjectProjectIdDelete([FromRoute][Required]decimal? projectId)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200, default(Response));
+            string exampleJson = null;
+            exampleJson = "{\n  \"code\" : 0.8008281904610115,\n  \"data\" : \"\",\n  \"ok\" : true,\n  \"message\" : \"message\",\n  \"errors\" : [ \"errors\", \"errors\" ]\n}";
+            
+                        var example = exampleJson != null
+                        ? JsonConvert.DeserializeObject<Response>(exampleJson)
+                        : default(Response);            //TODO: Change the data returned
+            return new ObjectResult(example);
+        }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <remarks>Get a particular project</remarks>
+        /// <param name="projectId"></param>
+        /// <response code="200">Success</response>
+        [HttpGet]
+        [Route("/KMS_Tasks/Api_Doc/1.0.0/api/v1/Project/project/{projectId}")]
+        [Authorize(AuthenticationSchemes = BearerAuthenticationHandler.SchemeName)]
+        [ValidateModelState]
+        [SwaggerOperation("ApiV1ProjectProjectProjectIdGet")]
+        [SwaggerResponse(statusCode: 200, type: typeof(Response), description: "Success")]
+        public virtual IActionResult ApiV1ProjectProjectProjectIdGet([FromRoute][Required]decimal? projectId)
         { 
             //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
             // return StatusCode(200, default(Response));
